--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -103,7 +103,7 @@
             android:hint="Phone"
             android:maxLines="1"
             android:textColor="@android:color/black"
-            android:textColorHint="@android:color/white"
+            android:textColorHint="@android:color/black"
             android:textSize="15sp" />
 
     </com.github.florent37.materialtextfield.MaterialTextField>
